--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -234,3 +234,6 @@ mark_penti: "https://seer2-resource.yuuinih.com/png/markImage/3095.png"
 mark_qianglipenti: "https://seer2-resource.yuuinih.com/png/markImage/3096.png"
 mark_chaojipenti: "https://seer2-resource.yuuinih.com/png/markImage/3097.png"
 mark_fasibilei: "https://seer2-resource.yuuinih.com/png/markImage/3098.png"
+mark_cuimian: "https://seer2-resource.yuuinih.com/png/markImage/3094.png"
+mark_jingshenshikong: "https://seer2-resource.yuuinih.com/png/markImage/3093.png"
+mark_niandongfanshe: "https://seer2-resource.yuuinih.com/png/markImage/4008.png"
