--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -835,3 +835,19 @@ skill_sangenfasi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
 skill_jisuhouti: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
 skill_shachenhoutuiti: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
 skill_fasibilei: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_niandong: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_zhenfen: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_cuimiananshi: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_jingshenbodong: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_jingsheganrao: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_cuimianshexian: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_emengxiji: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_shuimianguangxian: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_niandongfanshe: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_jingshensilie: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_jingshenshikong: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_xiaozhubieduidui: 'https://seer2-resource.yuuinih.com/sound/skill/10566.mp3'
+skill_jingshenguangbo: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_emengqinxi: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_ziwocuimian: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_shiyi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
