--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -1286,3 +1286,22 @@
     attribute: rage
     modifierType: override
     value: 0
+# 自眠: 自我催眠先制+1
+- id: effect_emblem_ziwocuimian_priority_plus_1
+  trigger: OnBattleStart
+  priority: 0
+  apply:
+    type: addSkillAttributeModifier
+    target:
+      base: selfSkills
+      chain:
+        - type: whereAttr
+          extractor:
+            type: base
+            arg: baseId
+          evaluator:
+            type: same
+            value: skill_ziwocuimian
+    attribute: priority
+    modifierType: delta
+    value: 1
