--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -10384,3 +10384,182 @@
       value: mark_fasibilei
   condition:
     type: selfUseSkill
+# 给对手添加催眠
+- id: effect_skill_add_mark_opponent_cuimian
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: opponent
+    mark:
+      type: entity:baseMark
+      value: mark_cuimian
+  condition:
+    type: selfUseSkill
+# 对方有催眠时，造成30-70点伤害
+- id: effect_skill_fixed_damage_30_70_if_opponent_has_cuimian
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: addModified
+    target: damageContext
+    percent: 0
+    delta: &sample_30_70
+      type: selector
+      value: [30, 70]
+      chain:
+        - type: sampleBetween
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: opponentHasMark
+        baseId: mark_cuimian
+# 对手睡眠时威力2倍
+- id: effect_skill_power_2x_if_opponent_shuimian
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: amplifyPower
+    target: useSkillContext
+    value: 2
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: opponentHasMark
+        baseId: mark_shuimian
+# 40%使对手睡眠
+- id: effect_skill_add_mark_opponent_shuimian_40_percent
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    type: addMark
+    target: opponent
+    mark:
+      type: entity:baseMark
+      value: mark_shuimian
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - &condition_probability_40_percent_template
+        type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent:
+            type: 'raw:number'
+            value: 40
+            tags: ['skill_effect_probability']
+# 给自己添加念动反射
+- id: effect_skill_add_mark_niandongfanshe
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_niandongfanshe
+  condition:
+    type: selfUseSkill
+# 对手催眠时，使对方获得50点流血
+- id: effect_skill_add_mark_opponent_liuxie_50_if_has_cuimian
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: opponent
+    mark:
+      type: entity:baseMark
+      value: mark_liuxie
+    stack: 50
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: opponentHasMark
+        baseId: mark_cuimian
+# 使自身获得精神失控
+- id: effect_skill_add_mark_jingshenshikong
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_jingshenshikong
+  condition:
+    type: selfUseSkill
+# 附加30-70点伤害
+- id: effect_skill_fixed_damage_30_70
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: addModified
+    target: damageContext
+    percent: 0
+    delta: *sample_30_70
+  condition:
+    type: selfUseSkill
+# 使自身睡眠
+- id: effect_skill_add_mark_shuimian
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_shuimian
+  condition:
+    type: selfUseSkill
+# 使自己获得100点受到伤害增加
+- id: effect_skill_add_mark_shanghaizengjia_100
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_shanghaizengjia
+    stack: 100
+  condition:
+    type: selfUseSkill
+# 对手催眠时，10%使对手害怕
+- id: effect_skill_add_mark_opponent_haipa_if_has_cuimian_10_percent
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: opponent
+    mark:
+      type: entity:baseMark
+      value: mark_haipa
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: opponentHasMark
+        baseId: mark_cuimian
+      - *condition_probability_10_percent_template
+# 对手催眠时，15%使对手害怕
+- id: effect_skill_add_mark_opponent_haipa_if_has_cuimian_15_percent
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: opponent
+    mark:
+      type: entity:baseMark
+      value: mark_haipa
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: opponentHasMark
+        baseId: mark_cuimian
+      - *condition_probability_15_percent_template
