--- a/data/mark_ability.yaml
+++ b/data/mark_ability.yaml
@@ -317,3 +317,8 @@
   tags: [ability]
   effect:
     - effect_ability_fixed_damage_15_when_has_penti
+- id: mark_ability_cuimian
+  config: *ability_config
+  tags: [ability]
+  effect:
+    - effect_ability_reduce_damage_10_percent_when_opponent_has_cuimian
