--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -9914,3 +9914,152 @@
   rage: 10
   effect:
     - effect_skill_add_mark_fasibilei
+- id: skill_niandong
+  element: Normal
+  category: Special
+  target: opponent
+  power: 60
+  accuracy: 100
+  rage: 0
+  effect:
+    - effect_skill_reduce_opponent_spd_1_stage_5_percent
+- id: skill_zhenfen
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  accuracy: 100
+  rage: 10
+  effect:
+    - effect_skill_raise_spa_1_stage
+- id: skill_cuimiananshi
+  element: Psychic
+  category: Physical
+  target: opponent
+  power: 65
+  accuracy: 95
+  rage: 10
+  effect:
+    - effect_skill_add_mark_opponent_cuimian
+- id: skill_jingshenbodong
+  element: Psychic
+  category: Special
+  target: opponent
+  power: 70
+  accuracy: 95
+  rage: 15
+  effect:
+    - effect_skill_fixed_damage_30_70_if_opponent_has_cuimian
+- id: skill_jingsheganrao
+  element: Psychic
+  category: Status
+  target: opponent
+  power: 0
+  accuracy: 95
+  rage: 20
+  effect:
+    - effect_skill_reduce_opponent_atk_1_stage
+    - effect_skill_reduce_opponent_spa_1_stage
+- id: skill_cuimianshexian
+  element: Psychic
+  category: Special
+  target: opponent
+  power: 80
+  accuracy: 95
+  rage: 20
+  effect:
+    - effect_skill_add_mark_opponent_shuimian_10_percent
+- id: skill_emengxiji
+  element: Psychic
+  category: Special
+  target: opponent
+  power: 75
+  accuracy: 95
+  rage: 15
+  effect:
+    - effect_skill_power_2x_if_opponent_shuimian
+    - effect_skill_add_mark_opponent_haipa_if_has_cuimian_10_percent
+- id: skill_shuimianguangxian
+  element: Psychic
+  category: Status
+  target: opponent
+  power: 0
+  accuracy: 40
+  rage: 20
+  effect:
+    - effect_skill_add_mark_opponent_shuimian_40_percent
+- id: skill_niandongfanshe
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  accuracy: 95
+  rage: 15
+  effect:
+    - effect_skill_add_mark_niandongfanshe
+- id: skill_jingshensilie
+  element: Psychic
+  category: Physical
+  target: opponent
+  power: 70
+  accuracy: 95
+  rage: 15
+  effect:
+    - effect_skill_add_mark_opponent_liuxie_50_if_has_cuimian
+- id: skill_jingshenshikong
+  element: Psychic
+  category: Status
+  target: self
+  power: 0
+  accuracy: 100
+  rage: 15
+  effect:
+    - effect_skill_add_mark_jingshenshikong
+- id: skill_xiaozhubieduidui
+  element: Psychic
+  category: Climax
+  target: opponent
+  power: 165
+  accuracy: 100
+  rage: 100
+  sureHit: true
+  effect:
+    - effect_skill_fixed_damage_30_70
+- id: skill_jingshenguangbo
+  element: Psychic
+  category: Special
+  target: opponent
+  power: 80
+  accuracy: 95
+  rage: 20
+  effect:
+    - effect_skill_fixed_damage_30_70_if_opponent_has_cuimian
+- id: skill_emengqinxi
+  element: Psychic
+  category: Special
+  target: opponent
+  power: 85
+  accuracy: 95
+  rage: 20
+  effect:
+    - effect_skill_power_2x_if_opponent_shuimian
+    - effect_skill_add_mark_opponent_haipa_if_has_cuimian_15_percent
+- id: skill_ziwocuimian
+  element: Psychic
+  category: Status
+  target: self
+  power: 0
+  accuracy: 100
+  rage: 0
+  effect:
+    - effect_skill_add_mark_shuimian
+    - effect_skill_add_mark_shanghaizengjia_100
+- id: skill_shiyi
+  element: Psychic
+  category: Status
+  target: self
+  power: 0
+  accuracy: 100
+  rage: 15
+  effect:
+    - effect_skill_clear_stage
