--- a/data/species.yaml
+++ b/data/species.yaml
@@ -7236,3 +7236,120 @@
     - mark_ability_penti
   emblem:
     - mark_emblem_fasi
+- id: pet_pige
+  num: 88
+  element: Psychic
+  baseStats:
+    hp: 82
+    atk: 119
+    def: 118
+    spa: 128
+    spd: 117
+    spe: 108
+  genderRatio:
+    - 8
+    - 2
+  heightRange:
+    - 29
+    - 34
+  weightRange:
+    - 10
+    - 15
+  learnable_skills:
+    - skill_id: skill_chongzhuang
+      level: 1
+      hidden: false
+    - skill_id: skill_niandong
+      level: 5
+      hidden: false
+    - skill_id: skill_zhenfen
+      level: 10
+      hidden: false
+    - skill_id: skill_cuimiananshi
+      level: 14
+      hidden: false
+    - skill_id: skill_jingshenbodong
+      level: 18
+      hidden: false
+    - skill_id: skill_jingsheganrao
+      level: 23
+      hidden: false
+  ability:
+    - mark_ability_cuimian
+  emblem:
+    - mark_emblem_zimian
+- id: pet_pipige
+  num: 89
+  element: Psychic
+  baseStats:
+    hp: 172
+    atk: 169
+    def: 163
+    spa: 178
+    spd: 162
+    spe: 153
+  genderRatio:
+    - 8
+    - 2
+  heightRange:
+    - 51
+    - 56
+  weightRange:
+    - 47
+    - 52
+  learnable_skills:
+    - skill_id: skill_chongzhuang
+      level: 1
+      hidden: false
+    - skill_id: skill_niandong
+      level: 5
+      hidden: false
+    - skill_id: skill_zhenfen
+      level: 10
+      hidden: false
+    - skill_id: skill_cuimiananshi
+      level: 14
+      hidden: false
+    - skill_id: skill_jingshenbodong
+      level: 18
+      hidden: false
+    - skill_id: skill_jingsheganrao
+      level: 23
+      hidden: false
+    - skill_id: skill_cuimianshexian
+      level: 28
+      hidden: false
+    - skill_id: skill_emengxiji
+      level: 33
+      hidden: false
+    - skill_id: skill_shuimianguangxian
+      level: 38
+      hidden: false
+    - skill_id: skill_niandongfanshe
+      level: 43
+      hidden: false
+    - skill_id: skill_jingshensilie
+      level: 48
+      hidden: false
+    - skill_id: skill_jingshenshikong
+      level: 53
+      hidden: false
+    - skill_id: skill_xiaozhubieduidui
+      level: 60
+      hidden: true
+    - skill_id: skill_jingshenguangbo
+      level: 60
+      hidden: true
+    - skill_id: skill_emengqinxi
+      level: 60
+      hidden: true
+    - skill_id: skill_ziwocuimian
+      level: 60
+      hidden: true
+    - skill_id: skill_shiyi
+      level: 60
+      hidden: true
+  ability:
+    - mark_ability_cuimian
+  emblem:
+    - mark_emblem_zimian
